--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,11 +1,11 @@
 {
-  "vercel": 2,
-  "builds": [{ "src": "*ts", "use": "@vercel/node" }],
-
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
-  ]
-}
+    "version": 2,
+    "builds": [{ "src": "*ts", "use": "@vercel/node" }],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
+    ]
+  }
+  
